--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,3 @@
-inherit_gem:
-  rubocop-github:
-    - config/default.yml
-
-AllCops:
-  Exclude:
-    - _site/**/*
-    - vendor/**/*
-
-Layout/LineLength:
-  Enabled: false
-
-  
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
